feat: project for rew sprint number 5